@@ -4,7 +4,7 @@
     <defaultcontrol always="true">50</defaultcontrol>
     <menucontrol>300</menucontrol>
     
-    <views>50,51,52,53,54,55,56,57,58,59,500,501</views>
+    <include>View_ViewIDs</include>
     <controls>
         <include>Global_Background</include>
         <include>View_Library</include>
