@@ -3,8 +3,7 @@
 <window id="6">
     <defaultcontrol always="true">50</defaultcontrol>
     <menucontrol>300</menucontrol>
-    
-    <views>50,51,52,53,54,55,56,57,58,59,500,501,502</views>
+    <include>View_ViewIDs</include>
     <onload condition="System.HasAddon(script.tv.show.next.aired)">RunScript(script.tv.show.next.aired,backend=True)</onload>
     <controls>
 
