@@ -1,3 +1,6 @@
+[B]0.9.25[/B]
+VIEWTYPES - Add Square Wall Large
+
 [B]0.9.24[/B]
 LEIA - VIDEOOSD - Subtitles button opens subtitles menu
 DIALOGSUBTITLES - Fix filename length and scroll
